# QuickDock

./: .prettierignore  Cargo.toml  README.md  package.json
apps/app/: .env.development  .env.example  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
apps/app/src/: App.tsx  main.tsx  vite-env.d.ts
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/src/: lib.rs  main.rs
apps/app/src/components/: ThemeToggle.tsx
apps/app/src/hooks/: useThemeInit.ts
apps/app/src/layouts/: MainLayout.tsx
apps/app/src/lib/: api.ts
apps/app/src/pages/: AccountsPage.tsx  FloatingWidgetPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx
apps/app/src/store/: themeStore.ts
apps/app/src/styles/: globals.css
apps/server/: .env.example  eslint.config.js  package.json  tsconfig.json
apps/server/src/: index.ts
apps/server/src/db/: database.ts
apps/server/src/routes/: accounts.ts  health.ts  history.ts
